// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalogue layout Should render catalogue layout 1`] = `
<div
  class="Catalogue"
>
  <section
    class="Catalogue-Main"
  >
    <div
      class="Catalogue-Summary"
    >
      <div>
        SummaryConnected mock. Props used: {}
      </div>
      <div>
        ExportConnected mock. Props used: {}
      </div>
    </div>
    <div>
      TreeConnected mock. Props used: {"permissions":{"can_filter_and_click":true,"can_export":true}}
    </div>
  </section>
  <aside
    class="Catalogue-Aside"
  >
    <div>
      FiltersConnected mock. Props used: {}
    </div>
  </aside>
</div>
`;

exports[`Catalogue layout Should render catalogue layout with root service defined 1`] = `
<div
  class="Catalogue"
>
  <section
    class="Catalogue-Main"
  >
    <div
      class="Catalogue-Summary"
    >
      <div>
        SummaryConnected mock. Props used: {}
      </div>
      <div>
        ExportConnected mock. Props used: {"rootServiceId":42}
      </div>
    </div>
    <div>
      TreeConnected mock. Props used: {"rootServiceId":42,"permissions":{"can_filter_and_click":true,"can_export":true}}
    </div>
  </section>
  <aside
    class="Catalogue-Aside"
  >
    <div>
      FiltersConnected mock. Props used: {}
    </div>
  </aside>
</div>
`;

exports[`Catalogue layout Should render catalogue layout without export 1`] = `
<div
  class="Catalogue"
>
  <section
    class="Catalogue-Main"
  >
    <div
      class="Catalogue-Summary"
    >
      <div>
        SummaryConnected mock. Props used: {}
      </div>
    </div>
    <div>
      TreeConnected mock. Props used: {"rootServiceId":42,"permissions":{"can_filter_and_click":true,"can_export":false}}
    </div>
  </section>
  <aside
    class="Catalogue-Aside"
  >
    <div>
      FiltersConnected mock. Props used: {}
    </div>
  </aside>
</div>
`;

exports[`Catalogue layout Should render catalogue layout without filters and summary 1`] = `
<div
  class="Catalogue"
>
  <section
    class="Catalogue-Main"
  >
    <div
      class="Catalogue-Summary"
    >
      <div>
        ExportConnected mock. Props used: {"rootServiceId":42}
      </div>
    </div>
    <div>
      TreeConnected mock. Props used: {"rootServiceId":42,"permissions":{"can_filter_and_click":false,"can_export":true}}
    </div>
  </section>
</div>
`;
